src/components/Portfolio/Portfolio.css
.portfolio {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  font-family: "Poppins", sans-serif;
}

.portfolio-headings {
  width: 90%;
  position: absolute;
  display: flex;
  align-items: flex-end;
  flex-wrap: wrap;
  opacity: 0.5;
  top: 6vh;
}

.portfolio-headings_num {
  font-size: 3.5rem;
  font-weight: 700;
  letter-spacing: 2px;
  color: var(--font-hover-color);
  margin-right: 0.5rem;
}

.portfolio-headings_title {
  font-size: 3rem;
  font-weight: 700;
  letter-spacing: 5px;
  color: var(--font-color);
  text-transform: uppercase;
}

.portfolio-img-title {
  width: 90%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0;
}

.portfolio-img {
  width: 90%;
  max-width: 750px;
  z-index: 1;
}

.portfolio-img_pic {
  width: 100%;
  height: 100%;
  min-height: 220px;
}

.portfolio-content {
  position: relative;
  width: 100%;
  background: var(--font-color);
  opacity: 0.9;
  border-radius: 1px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  align-items: center;
}

.portfolio-img-title_heading {
  padding: 1rem 0;
  color: var(--font-hover-color);
  font-size: 1.2rem;
  letter-spacing: 2px;
  font-weight: 700;
  text-transform: uppercase;
}

.portfolio-content_description {
  width: 90%;
  padding: 1rem 0;
  color: var(--bg-color);
  font-size: 1rem;
  letter-spacing: 1px;
  line-height: 1.5rem;
}

.portfolio-content_technologys {
  width: 90%;
  color: var(--bg-color);
  display: flex;
  align-items: flex-start;
  flex-wrap: wrap;
  margin: 0.5rem 0;
}

.portfolio-content_technologys li {
  font-size: 1rem;
  padding-right: 1rem;
}

.portfolio-content_link {
  width: 90%;
  display: flex;
  align-items: flex-start;
  margin: 1rem 0;
}

.portfolio-content_icon {
  fill: var(--bg-color);
  padding-right: 1rem;
}

.icon-github {
  left: 10px;
}

.icon-page {
  left: 50px;
}

.portfolio-content_icon:hover {
  fill: var(--font-hover-color);
}

@media (min-width: 576px) {
  .portfolio-img-title_heading {
    font-size: 1.5rem;
    letter-spacing: 2.5px;
    margin: 1rem 0;
  }

  .portfolio-content_description {
    font-size: 1.2rem;
    letter-spacing: 1.5px;
    line-height: 2rem;
    margin: 0 0 1rem;
  }

  .portfolio-content_technologys {
    margin: 0 0 1rem;
  }

  .portfolio-content_technologys li {
    font-size: 1rem;
  }
}

@media (min-width: 768px) {
  .portfolio-img-title {
    position: absolute;
    bottom: 5vh;
    right: 0;
    align-items: flex-end;
  }

  .portfolio-img-title_heading {
    font-size: 2.5rem;
    letter-spacing: 3px;
    margin: 0;
    padding: 5vh;
  }

  .portfolio-img {
    margin-top: 0;
    position: relative;
    overflow: hidden;
  }

  .portfolio-img:hover .portfolio-content {
    animation: overlaying;
    animation-duration: 2s;
    animation-fill-mode: forwards;
  }

  .portfolio-img:hover .portfolio-content_link {
    right: 0;
    background: none;
  }

  @keyframes overlaying {
    from {
      transform: translateX(-100%);
    }
    to {
      transform: translateX(0);
    }
  }

  .portfolio-content {
    position: absolute;
    top: 0;
    bottom: 0;
    transform: translateX(-100%);
  }

  .portfolio-content_description {
    position: relative;
    width: auto;
    left: 0;
    bottom: -30%;
    padding: 3rem;
  }

  .portfolio-content_technologys {
    position: relative;
    width: auto;
    left: 0;
    bottom: -20%;
  }

  .portfolio-content_link {
    position: absolute;
    width: 40px;
    height: 100px;
    right: -40px;
    top: 60%;
    flex-direction: column;
    justify-content: space-around;
    background-color: var(--font-color);
    opacity: 0.6;
  }
}

@media (min-width: 992px) {
  .portfolio {
    padding: 0 5rem;
    flex-direction: row;
  }

  .portfolio-img {
    margin: 0;
    max-width: 850px;
  }

  .portfolio-img-title_heading {
    font-size: 3rem;
    letter-spacing: 4px;
  }
}

